# sna-project

./: .gitignore  README.md  pyproject.toml
output/: results.json
output/tables/: task2_global_stats.csv  task2_global_stats.tex  task3_top_components.csv  task3_top_components.tex  task5_powerlaw.csv  task5_powerlaw.tex  task6_time_subgraphs.csv  task6_time_subgraphs.tex  task7_triangles.csv  task7_triangles.tex  task8_sentiment.csv  task8_sentiment.tex  task9_sis.csv  task9_sis.tex  top_hashtags.csv  top_hashtags.tex
report/: main.tex  slides.tex
src/: analysis.py  build_graph.py  extra_tables.py  polish_tables.py  preprocess.py  rerun_8_9.py
